Add swagger annotations
